--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
+    "popups": "^1.1.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
